results/SVCOMP/specgen/log-ExSymExe20-2024_03_04_18_57_54.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result ==> field == 9 && field2 == 0;
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires x == 3;
  //@ requires z == field;
  //@ requires r == field2;
  //@ ensures \result ==> z == x + field && x == field - 3 && field2 == x + field;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && field2 == 0;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:5: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field == 9 && field2 == 0;
                                        ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:14: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires z == field;
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:15: error: An identifier with package visibility may not be used in a requires clause with public visibility
  //@ requires r == field2;
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:16: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> z == x + field && x == field - 3 && field2 == x + field;
                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:16: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> z == x + field && x == field - 3 && field2 == x + field;
                                                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:16: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> z == x + field && x == field - 3 && field2 == x + field;
                                                              ^
/home/max/Documents/JMLGPT/tmp/ExSymExe20.java:16: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> z == x + field && x == field - 3 && field2 == x + field;
                                                                            ^
8 errors

class Main {
  static /*@ spec_public @*/ int field;
  static /*@ spec_public @*/ int field2;

  //@ ensures \result ==> field == 9 && field2 == 0;
  public static boolean main() {
    int x = 3;
    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires x == 3;
  //@ requires z == field;
  //@ requires r == field2;
  //@ ensures \result ==> z == x + field && x == field - 3 && field2 == x + field;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe20");
    int y = 3;
    r = x + z;
    x = z - y;
    z = r;
    if (z >= x) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= r) {
      return false;
    } else System.out.println("branch BOO2");

    return true;
  }
}
